Fix all z-index

--- a/client/src/components/modal/style.css
+++ b/client/src/components/modal/style.css
@@ -5,7 +5,7 @@
     position: fixed;
     text-align: center;
     transform: translateX(-50%);
-    z-index: 99999999999999;
+    z-index: 10000;
 }
 
 .loadingModalContent {
