--- a/client/src/components/views/CardDetailView/style.css
+++ b/client/src/components/views/CardDetailView/style.css
@@ -6,7 +6,7 @@
     text-align: center;
     top: 0;
     width: 100%;
-    z-index: 9999;
+    z-index: 1000;
 }
 
 .cardDetailOverlay:hover {
